--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   shared_preferences: ^2.0.17
-  intl: ^0.18.0
+  intl: ^0.17.0
   modal_bottom_sheet: ^2.1.2
   flutter_launcher_icons: ^0.11.0
+  sqflite: ^2.2.4+1
 
 dev_dependencies:
   flutter_test:
