--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   intl: ^0.17.0
   flutter_launcher_icons: ^0.11.0
   sqflite: ^2.2.4+1
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
