--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   sqflite: ^2.2.4+1
   flutter_datetime_picker: ^1.5.1
+  age_calculator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
