--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   sqflite: ^2.2.4+1
   flutter_datetime_picker: ^1.5.1
   age_calculator: ^1.0.0
+  data_table_2: ^2.3.12
 
 dev_dependencies:
   flutter_test:
