--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   path_provider: ^2.0.12
   google_mobile_ads: ^2.2.0
   app_tracking_transparency: ^2.0.3
-  syncfusion_flutter_pdf: ^20.4.53
+  pdf: ^3.8.4
 
 dev_dependencies:
   flutter_test:
