--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+1
+version: 1.0.3+1
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -28,6 +28,7 @@ dependencies:
   google_mobile_ads: ^2.2.0
   app_tracking_transparency: ^2.0.3
   pdf: ^3.8.4
+  printing: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +42,6 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/pdf/
 
   fonts:
     - family: SourceHanSerif-Bold
