--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.3+1
+version: 1.0.4+1
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -29,7 +29,7 @@ dependencies:
   app_tracking_transparency: ^2.0.3
   pdf: ^3.8.4
   printing: ^5.9.3
-  open_file: ^3.2.1
+  open_filex: ^4.3.2
 
 dev_dependencies:
   flutter_test:
