--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     //compileSdkVersion flutter.compileSdkVersion
-    compileSdkVersion 33
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -55,12 +55,12 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         //minSdkVersion flutter.minSdkVersion
-        minSdkVersion 28
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 34
+        targetSdkVersion 34
         //versionCode flutterVersionCode.toInteger()
-        versionCode 6
+        versionCode 7
         //versionName flutterVersionName
-        versionName '1.0.5'
+        versionName '1.0.6'
         multiDexEnabled true
     }
 
