--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.5+1
+version: 1.0.6+1
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -14,22 +14,22 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  provider: ^6.0.5
-  shared_preferences: ^2.0.17
-  intl: ^0.17.0
-  flutter_launcher_icons: ^0.11.0
-  sqflite: ^2.2.4+1
+  cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  intl: ^0.19.0
+  flutter_launcher_icons: ^0.13.1
+  sqflite: ^2.3.3+1
   flutter_datetime_picker: ^1.5.1
   age_calculator: ^1.0.0
-  data_table_2: ^2.3.12
-  image_picker: ^0.8.6+1
-  path_provider: ^2.0.12
-  google_mobile_ads: ^2.2.0
-  app_tracking_transparency: ^2.0.3
-  pdf: ^3.8.4
-  printing: ^5.9.3
-  open_filex: ^4.3.2
+  data_table_2: ^2.5.15
+  image_picker: ^1.1.2
+  path_provider: ^2.1.3
+  google_mobile_ads: ^5.1.0
+  app_tracking_transparency: ^2.0.5
+  pdf: ^3.11.0
+  printing: ^5.13.1
+  open_filex: ^4.4.0
 
 dev_dependencies:
   flutter_test:
